--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ project(SwiftShader C CXX ASM)
 # absolute paths by CMake's ZERO_CHECK.
 if(WIN32)
     # Disable automatically regenerating project files on CMakeLists.txt changes.
-    set(CMAKE_SUPPRESS_REGENERATION true)
+    set(CMAKE_SUPPRESS_REGENERATION TRUE)
 endif()
 
 ###########################################################
@@ -19,9 +19,9 @@ endif()
 ###########################################################
 
 if(CMAKE_SYSTEM_NAME MATCHES "Linux")
-    set(LINUX ON)
+    set(LINUX TRUE)
 elseif(CMAKE_SYSTEM_NAME MATCHES "Android")
-    set(ANDROID ON)
+    set(ANDROID TRUE)
     set(CMAKE_CXX_FLAGS "-DANDROID_NDK_BUILD")
 elseif(WIN32)
 elseif(APPLE)
@@ -55,7 +55,7 @@ else()
     endif()
 endif()
 
-set(CMAKE_MACOSX_RPATH ON)
+set(CMAKE_MACOSX_RPATH TRUE)
 set(CMAKE_BUILD_RPATH_USE_ORIGIN TRUE)
 
 if ((CMAKE_GENERATOR MATCHES "Visual Studio") AND (CMAKE_GENERATOR_TOOLSET STREQUAL ""))
@@ -101,38 +101,38 @@ function (set_if_not_defined name value)
     endif()
 endfunction()
 
-option_if_not_defined(SWIFTSHADER_BUILD_EGL "Build the EGL library" 1)
-option_if_not_defined(SWIFTSHADER_BUILD_GLESv2 "Build the OpenGL ES 2 library" 1)
-option_if_not_defined(SWIFTSHADER_BUILD_GLES_CM "Build the OpenGL ES 1.1 library" 1)
-option_if_not_defined(SWIFTSHADER_BUILD_VULKAN "Build the Vulkan library" 1)
-option_if_not_defined(SWIFTSHADER_BUILD_PVR "Fetch and build the PowerVR examples" 0)
+option_if_not_defined(SWIFTSHADER_BUILD_EGL "Build the EGL library" TRUE)
+option_if_not_defined(SWIFTSHADER_BUILD_GLESv2 "Build the OpenGL ES 2 library" TRUE)
+option_if_not_defined(SWIFTSHADER_BUILD_GLES_CM "Build the OpenGL ES 1.1 library" TRUE)
+option_if_not_defined(SWIFTSHADER_BUILD_VULKAN "Build the Vulkan library" TRUE)
+option_if_not_defined(SWIFTSHADER_BUILD_PVR "Fetch and build the PowerVR examples" FALSE)
 
-option_if_not_defined(SWIFTSHADER_USE_GROUP_SOURCES "Group the source files in a folder tree for Visual Studio" 1)
+option_if_not_defined(SWIFTSHADER_USE_GROUP_SOURCES "Group the source files in a folder tree for Visual Studio" TRUE)
 
-option_if_not_defined(SWIFTSHADER_BUILD_SAMPLES "Build sample programs" 1)
-option_if_not_defined(SWIFTSHADER_BUILD_TESTS "Build test programs" 1)
-option_if_not_defined(SWIFTSHADER_BUILD_BENCHMARKS "Build benchmarks" 0)
+option_if_not_defined(SWIFTSHADER_BUILD_SAMPLES "Build sample programs" TRUE)
+option_if_not_defined(SWIFTSHADER_BUILD_TESTS "Build test programs" TRUE)
+option_if_not_defined(SWIFTSHADER_BUILD_BENCHMARKS "Build benchmarks" FALSE)
 
-option_if_not_defined(SWIFTSHADER_MSAN "Build with memory sanitizer" 0)
-option_if_not_defined(SWIFTSHADER_ASAN "Build with address sanitizer" 0)
-option_if_not_defined(SWIFTSHADER_TSAN "Build with thread sanitizer" 0)
-option_if_not_defined(SWIFTSHADER_UBSAN "Build with undefined behavior sanitizer" 0)
-option_if_not_defined(SWIFTSHADER_WARNINGS_AS_ERRORS "Treat all warnings as errors" 1)
-option_if_not_defined(SWIFTSHADER_DCHECK_ALWAYS_ON "Check validation macros even in release builds" 0)
-option_if_not_defined(REACTOR_EMIT_DEBUG_INFO "Emit debug info for JIT functions" 0)
-option_if_not_defined(REACTOR_EMIT_PRINT_LOCATION "Emit printing of location info for JIT functions" 0)
-option_if_not_defined(REACTOR_ENABLE_PRINT "Enable RR_PRINT macros" 0)
-option_if_not_defined(REACTOR_VERIFY_LLVM_IR "Check reactor-generated LLVM IR is valid even in release builds" 0)
-option_if_not_defined(SWIFTSHADER_LESS_DEBUG_INFO "Generate less debug info to reduce file size" 0)
-option_if_not_defined(SWIFTSHADER_ENABLE_VULKAN_DEBUGGER "Enable Vulkan debugger support" 0)
-option_if_not_defined(SWIFTSHADER_ENABLE_ASTC "Enable ASTC compressed textures support" 1)  # TODO(b/150130101)
+option_if_not_defined(SWIFTSHADER_MSAN "Build with memory sanitizer" FALSE)
+option_if_not_defined(SWIFTSHADER_ASAN "Build with address sanitizer" FALSE)
+option_if_not_defined(SWIFTSHADER_TSAN "Build with thread sanitizer" FALSE)
+option_if_not_defined(SWIFTSHADER_UBSAN "Build with undefined behavior sanitizer" FALSE)
+option_if_not_defined(SWIFTSHADER_WARNINGS_AS_ERRORS "Treat all warnings as errors" TRUE)
+option_if_not_defined(SWIFTSHADER_DCHECK_ALWAYS_ON "Check validation macros even in release builds" FALSE)
+option_if_not_defined(REACTOR_EMIT_DEBUG_INFO "Emit debug info for JIT functions" FALSE)
+option_if_not_defined(REACTOR_EMIT_PRINT_LOCATION "Emit printing of location info for JIT functions" FALSE)
+option_if_not_defined(REACTOR_ENABLE_PRINT "Enable RR_PRINT macros" FALSE)
+option_if_not_defined(REACTOR_VERIFY_LLVM_IR "Check reactor-generated LLVM IR is valid even in release builds" FALSE)
+option_if_not_defined(SWIFTSHADER_LESS_DEBUG_INFO "Generate less debug info to reduce file size" FALSE)
+option_if_not_defined(SWIFTSHADER_ENABLE_VULKAN_DEBUGGER "Enable Vulkan debugger support" FALSE)
+option_if_not_defined(SWIFTSHADER_ENABLE_ASTC "Enable ASTC compressed textures support" TRUE)  # TODO(b/150130101)
 
 set(BUILD_MARL ${SWIFTSHADER_BUILD_VULKAN})
 
 if(${SWIFTSHADER_BUILD_VULKAN} AND ${SWIFTSHADER_ENABLE_VULKAN_DEBUGGER})
-    set_if_not_defined(SWIFTSHADER_BUILD_CPPDAP 1)
+    set_if_not_defined(SWIFTSHADER_BUILD_CPPDAP TRUE)
 else()
-    set_if_not_defined(SWIFTSHADER_BUILD_CPPDAP 0)
+    set_if_not_defined(SWIFTSHADER_BUILD_CPPDAP FALSE)
 endif()
 
 set(DEFAULT_REACTOR_BACKEND "LLVM")
@@ -158,7 +158,7 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
     message(FATAL_ERROR "In source builds are not allowed by LLVM, please create a build/ directory and build from there. You may have to delete the CMakeCache.txt file and CMakeFiles directory that are next to the CMakeLists.txt.")
 endif()
 
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
 
 ###########################################################
 # Initialize submodules
@@ -353,7 +353,7 @@ set(HELLO2_DIR ${THIRD_PARTY_DIR}/PowerVR_SDK/Examples/Beginner/01_HelloAPI/OGLE
 set(SWIFTSHADER_COMPILE_OPTIONS "")
 
 macro(set_cpp_flag FLAG)
-    if(${ARGC} GREATER 1)
+    if(${ARGC} GREATER TRUE)
         set(CMAKE_CXX_FLAGS_${ARGV1} "${CMAKE_CXX_FLAGS_${ARGV1}} ${FLAG}")
     else()
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAG}")
@@ -361,7 +361,7 @@ macro(set_cpp_flag FLAG)
 endmacro()
 
 macro(set_linker_flag FLAG)
-    if(${ARGC} GREATER 1)
+    if(${ARGC} GREATER TRUE)
         set(CMAKE_EXE_LINKER_FLAGS ${ARGV1} "${CMAKE_EXE_LINKER_FLAGS ${ARGV1}} ${FLAG}")
     else()
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${FLAG}")
@@ -506,7 +506,7 @@ else()
         set_cpp_flag("-s" RELEASE)
     endif()
 
-    if(SWIFTSHADER_DCHECK_ALWAYS_ON)
+    if(SWIFTSHADER_DCHECK_ALWAYS_TRUE)
         list(APPEND SWIFTSHADER_COMPILE_OPTIONS "-DDCHECK_ALWAYS_ON")
     endif()
 
@@ -548,7 +548,7 @@ if(SWIFTSHADER_WARNINGS_AS_ERRORS)
     endif()
 endif()
 
-if(REACTOR_EMIT_PRINT_LOCATION)
+if(REACTOR_EMIT_PRINT_LOCATITRUE)
     # This feature depends on REACTOR_EMIT_DEBUG_INFO and REACTOR_ENABLE_PRINT
     set(REACTOR_EMIT_DEBUG_INFO "On")
     set(REACTOR_ENABLE_PRINT "On")
@@ -1996,7 +1996,7 @@ elseif(LINUX)
 elseif(APPLE)
     find_library(COCOA_FRAMEWORK Cocoa)
     find_library(QUARTZ_FRAMEWORK Quartz)
-    find_library(CORE_FOUNDATION_FRAMEWORK CoreFoundation)
+    find_library(CORE_FOUNDATION_FRAMEWORK CoreFoundatiTRUE)
     find_library(IOSURFACE_FRAMEWORK IOSurface)
     set(OS_LIBS "${COCOA_FRAMEWORK}" "${QUARTZ_FRAMEWORK}" "${CORE_FOUNDATION_FRAMEWORK}" "${IOSURFACE_FRAMEWORK}")
 endif()
